compiler/testData/cli/js/compilationErrorK2.out
compiler/testData/cli/js/compilationErrorK2.kt:9:13: error: cannot access 'companion object Test : Any': it is private in '/Foo'.
        Foo.Test
            ^
COMPILATION_ERROR
