compiler/testData/cli/js/compilationErrorK2.kt
class Foo {
    private companion object Test {

    }
}

class Bar {
    fun a() {
        Foo.Test
    }
}